crates/jp_cli/src/cmd/query/tool/snapshots/jp_cli__cmd__query__tool__renderer__tests__format_args_function_call.snap
---
source: crates/jp_cli/src/cmd/query/tool/renderer_tests.rs
expression: plain
---
(a: 1, b: "hello")
