crates/jp_cli/src/cmd/query/tool/snapshots/jp_cli__cmd__query__tool__renderer__tests__format_args_json.snap
---
source: crates/jp_cli/src/cmd/query/tool/renderer_tests.rs
expression: result
---
 with arguments:

```json
{
  "path": "/tmp/test.txt"
}
```
