crates/jp_cli/src/cmd/query/tool/snapshots/jp_cli__cmd__query__tool__renderer__tests__render_custom_content_after_approval.snap
---
source: crates/jp_cli/src/cmd/query/tool/renderer_tests.rs
expression: output
---
custom-output
