crates/jp_cli/src/cmd/query/tool/snapshots/jp_cli__cmd__query__tool__renderer__tests__render_result_truncated.snap
---
source: crates/jp_cli/src/cmd/query/tool/renderer_tests.rs
expression: output
---
line1
line2
 _(truncated to 2 lines)_
