crates/jp_cli/src/cmd/query/tool/snapshots/jp_cli__cmd__query__tool__renderer__tests__render_tool_call_function_call.snap
---
source: crates/jp_cli/src/cmd/query/tool/renderer_tests.rs
expression: output
---
Calling tool cargo_check(package: "jp_cli")
